# Coconuts

./: .gitignore  .gitmodules  ACKNOWLEDGEMENTS.md  Acknowledgements.md  README.md
Coconuts/: CMakeLists.txt
Coconuts/include/coconuts/: Application.h  AssetManager.h  ECS.h  EventSystem.h  FileSystem.h  Keyboard.h  Layer.h  Logger.h  Mouse.h  Polling.h  Renderer.h  SceneManager.h  core.h  editor.h  types.h
Coconuts/include/coconuts/application/: Application.h
Coconuts/include/coconuts/cameras/: CameraController.h  OrthographicCamera.h
Coconuts/include/coconuts/debug/: Profiler.h  TimeProfiler.h
Coconuts/include/coconuts/ecs/: Behavior.h  Behavioral.h  Entity.h  EventHandler.h  Scene.h  Serializer.h
Coconuts/include/coconuts/ecs/components/: BehaviorComponent.h  EventHandlerComponent.h  OrthoCameraComponent.h  SpriteComponent.h  TagComponent.h  TransformComponent.h
Coconuts/include/coconuts/ecs/event_handlers/: CameraEventHandler.h
Coconuts/include/coconuts/ecs/systems/: CameraNavSystem.h
Coconuts/include/coconuts/editor_gui/: GUILayer.h
Coconuts/include/coconuts/event_system/: AppWindowEvent.h  Event.h  EventDispatcher.h  EventTypes.h  InputKeyEvent.h  InputMouseEvent.h  WindowEvent.h
Coconuts/include/coconuts/graphics/: BufferLayout.h  Framebuffer.h  GraphicsContext.h  IndexBuffer.h  LowLevelAPI.h  Renderer2D.h  RendererAPI.h  Shader.h  Sprite.h  Texture.h  VertexArray.h  VertexBuffer.h  defs.h
Coconuts/include/coconuts/graphics/shaders/: Default.frag  GLSL_Default.frag  GLSL_Default.vert
Coconuts/include/coconuts/input_polling/: InputPolling.h
Coconuts/include/coconuts/layer_system/: GameLayer.h  LayerStack.h  Timestep.h
Coconuts/include/coconuts/maths/: ExpMovingAvg.h
Coconuts/include/coconuts/window_system/: Window.h
Coconuts/src/: Application.cpp  CMakeLists.txt  core.cpp
Coconuts/src/application/: Application.cpp
Coconuts/src/core/: CMakeLists.txt  core.cpp
Coconuts/src/core/application/: AppManager.cpp  AppManager.h  Application.cpp  CMakeLists.txt
Coconuts/src/core/asset_manager/: AssetManager.cpp  AssetSerializer.cpp  AssetSerializer.h  CMakeLists.txt  LoadingRefs.cpp  LoadingRefs.h
Coconuts/src/core/cameras/: CMakeLists.txt  CameraController.cpp  OrthographicCamera.cpp
Coconuts/src/core/debug/: CMakeLists.txt  TimeProfiler.cpp
Coconuts/src/core/ecs/: CMakeLists.txt  Entity.cpp  Scene.cpp  SceneManager.cpp  Serializer.cpp
Coconuts/src/core/ecs/event_handlers/: CMakeLists.txt  CameraEventHandler.cpp
Coconuts/src/core/ecs/systems/: CMakeLists.txt  CameraNavSystem.cpp
Coconuts/src/core/event_system/: CMakeLists.txt  EventDispatcher.cpp
Coconuts/src/core/filesystem/: CMakeLists.txt
Coconuts/src/core/graphics/: CMakeLists.txt  Framebuffer.cpp  IndexBuffer.cpp  LowLevelAPI.cpp  Renderer.cpp  Renderer2D.cpp  RendererAPI.cpp  Shader.cpp  Sprite.cpp  Texture.cpp  VertexArray.cpp  VertexBuffer.cpp
Coconuts/src/core/graphics/cameras/: OrthographicCamera.cpp
Coconuts/src/core/layer_system/: CMakeLists.txt  GameLayer.cpp  Layer.cpp  LayerStack.cpp
Coconuts/src/core/logger/: CMakeLists.txt  Logger.cpp
Coconuts/src/core/platform/GNU/: CMakeLists.txt
Coconuts/src/core/platform/GNU/filesystem/: CMakeLists.txt  GNUFileSystem.cpp  GNUFileSystem.h
Coconuts/src/core/platform/GNU/polling/: CMakeLists.txt  GNUPolling.cpp  GNUPolling.h
Coconuts/src/core/platform/GNU/window_system/: CMakeLists.txt  GNUWindow.cpp  GNUWindow.h
Coconuts/src/core/platform/MacOS/: CMakeLists.txt
Coconuts/src/core/platform/MacOS/filesystem/: CMakeLists.txt  MacFileSystem.cpp  MacFileSystem.h
Coconuts/src/core/platform/MacOS/input_polling/: CMakeLists.txt  MacInputPolling.cpp  MacInputPolling.h
Coconuts/src/core/platform/MacOS/polling/: CMakeLists.txt  MacPolling.cpp  MacPolling.h
Coconuts/src/core/platform/MacOS/window_system/: CMakeLists.txt  MacWindow.cpp  MacWindow.h
Coconuts/src/core/platform/OpenGL/: CMakeLists.txt  OpenGLFramebuffer.cpp  OpenGLFramebuffer.h  OpenGLGraphicsContext.cpp  OpenGLGraphicsContext.h  OpenGLIndexBuffer.cpp  OpenGLIndexBuffer.h  OpenGLRendererAPI.cpp  OpenGLRendererAPI.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLTexture.cpp  OpenGLTexture.h  OpenGLVertexArray.cpp  OpenGLVertexArray.h  OpenGLVertexBuffer.cpp  OpenGLVertexBuffer.h
Coconuts/src/editor/: CMakeLists.txt  editor.cpp
Coconuts/src/editor/standalone/: CMakeLists.txt  EditorLayer.cpp  EditorLayer.h  GameLayer.cpp  GameLayer.h  MainApp.cpp  MainApp.h  StandaloneApp.cpp  StandaloneApp.h  ed_utils.cpp  ed_utils.h  main.cpp
Coconuts/src/editor/standalone/fonts/: Fonts.h
Coconuts/src/editor/standalone/menu_bar/: AssetsMenu.cpp  AssetsMenu.h  CMakeLists.txt  EntityMenu.cpp  EntityMenu.h  FileMenu.cpp  FileMenu.h
Coconuts/src/editor/standalone/panels/: AssetInspector.cpp  AssetInspector.h  Assets.cpp  Assets.h  CMakeLists.txt  ComponentInspector.cpp  ComponentInspector.h  SceneOverview.cpp  SceneOverview.h  Statistics.cpp  Statistics.h  Viewport.cpp  Viewport.h
Coconuts/src/editor/standalone/popups/: CMakeLists.txt  CreateSpritePopUp.cpp  CreateSpritePopUp.h  ImportTexture2DPopUp.cpp  ImportTexture2DPopUp.h  LoadProjectPopUp.cpp  LoadProjectPopUp.h  SaveProjectPopUp.cpp  SaveProjectPopUp.h
Coconuts/src/event_system/: EventDispatcher.cpp
Coconuts/src/layer_system/: Layer.cpp
Coconuts/src/logger/: Logger.cpp
Coconuts/src/platform/GNU/: CMakeLists.txt
Coconuts/src/platform/MacOS/: CMakeLists.txt
Coconuts/src/platform/MacOS/window_system/: MacWindow.cpp  MacWindow.h
Demo/: CMakeLists.txt
Demo/assets/shaders/: FlatColor.frag  FlatColor.vert  TextureGLSL.frag  TextureGLSL.vert
Demo/examples/: Example_BufferLayoutUsage.cpp  Example_FlatColorPicker.cpp
Demo/examples/batch2d/: CMakeLists.txt  demo.cpp
Demo/examples/tiles2d/: CMakeLists.txt  CameraController.cpp  CameraController.h  EditorLayer.cpp  EditorLayer.h  GameLayer.cpp  GameLayer.h  MainApp.cpp  MainApp.h  main.cpp
Demo/include/: CameraController.h  demo.h
Demo/src/: CMakeLists.txt  demo.cpp
